--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
-    "helmet": "^3.12.0"
+    "helmet": "^3.12.0",
+    "request": "^2.87.0"
   }
 }
